--- a/client/index.html
+++ b/client/index.html
@@ -1,2 +1,13 @@
-<div id="root"></div>
-<script src="/build/index.bundle.js"></script>
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" type="text/css" href="/build/index.css">
+</head>
+<body>
+
+  <div id="root"></div>
+  <script src="/build/index.bundle.js"></script>
+</body>
+</html>
+
+
